--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,13 @@
             android:id="@+id/normal_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Normal"/>
+            android:text="Normal"
+            android:layout_marginRight="5dp" />
         <Button
             android:id="@+id/terrain_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginRight="5dp"
             android:text="Terrain"/>
         <Button
             android:id="@+id/satellite_button"
@@ -28,10 +30,6 @@
             android:layout_height="wrap_content"
             android:text="Satellite"/>
     </LinearLayout>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"/>
 
     <fragment
         android:id="@+id/map"
